[workspace]
members = [
  "replay-engine",
  "replayer",
  "whirlpool-replay-command",
  "whirlpool-regression-test-command",
]

resolver = "2"

[workspace.package]
version = "0.1.11"
edition = "2021"

[workspace.dependencies]
bincode = "1.3.3"
serde = "*"
serde_derive = "*"
serde_json = "1.0.107"
flate2 = "1.0.27"
csv = "1.3.0"
base64 = "0.21.4"
chrono = "0.4.31"
thiserror = "*"
itertools = "0.10.1"
tokio = { version = "1.14.1", features = ["full"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.75"
tempfile = "3.8.0"

# DB
mysql = "24.0.0"

# RocksDB
rocksdb = "0.21.0"

# anchor & whirlpool
anchor-lang = "0.29.0"
anchor-client = "0.29.0"
whirlpool_base = { git = "https://github.com/orca-so/whirlpools", branch = "yugure/for-replayer-20250616", package = "whirlpool" }

# borsh
borsh = "0.10.3"

# use 1.17.22
solana-sdk = "=1.17.22"
solana-program = "=1.17.22"
solana-program-runtime = "=1.17.22"
solana-accounts-db = "=1.17.22"
solana-transaction-status = "=1.17.22"
solana-client = "=1.17.22"
solana-runtime = "=1.17.22"
solana-cli-output = "=1.17.22"
spl-token = "=4.0.0"
spl-token-2022 = "=1.0.0"
