[package]
name = "whirlpool-replayer"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

# solana
solana-transaction-status = { workspace = true }
solana-cli-output = { workspace = true }

# internal
replay-engine = { path = "../replay-engine" }
