[package]
name = "whirlpool-regression-test"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }

anchor-lang = { workspace = true }
whirlpool_base = { workspace = true }
borsh = "0.10.3"

# internal
replay-engine = { path = "../replay-engine" }
whirlpool-replayer = { path = "../replayer" }
