[package]
name = "whirlpool-replay"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
itertools = { workspace = true }

anchor-lang = { workspace = true }
whirlpool_base = { workspace = true }

# internal
whirlpool-replayer = { path = "../replayer" }
