[package]
name = "solana-banks-server"
description = "Solana banks server"
documentation = "https://docs.rs/solana-banks-server"
version = "1.16.16"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5.8"
futures = "0.3.28"
solana-banks-interface = "=1.16.16"
solana-client = "=1.16.16"
solana-runtime = "=1.16.16"
solana-sdk = "=1.16.16"
solana-send-transaction-service = "=1.16.16"
tarpc = { version = "0.29.0", features = ["full"] }
tokio = { version = "1.14.1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "solana_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
