[package]
name = "solana-storage-proto"
description = "Solana Storage Protobuf Definitions"
documentation = "https://docs.rs/solana-storage-proto"
version = "1.16.16"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
prost = "0.11.9"
serde = "1.0.163"
solana-account-decoder = "=1.16.16"
solana-sdk = "=1.16.16"
solana-transaction-status = "=1.16.16"

[dev-dependencies]
enum-iterator = "1.4.1"

[lib]
crate-type = ["lib"]
name = "solana_storage_proto"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
tonic-build = "0.8.4"

# windows users should install the protobuf compiler manually and set the PROTOC
# envar to point to the installed binary
[target."cfg(not(windows))".build-dependencies]
protobuf-src = "1.1.0"
